Distinguish with floating window

--- a/autoshutdowntest/src/main/res/values/strings.xml
+++ b/autoshutdowntest/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
   <string name="stopUsingPhone">Stop using phone</string>
   <string name="darkBackgroundImage">Dark the background image</string>
   <string name="backgroundImage">Background image</string>
+  <string name="floatingWindowr">Floating window</string>
 </resources>
